scrollbar height fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ input{
 /* scrollbar style */
 *::-webkit-scrollbar{
     width : 8px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
@@ -19,4 +20,8 @@ input{
 *::-webkit-scrollbar-thumb{
     background-color: rgb(59, 130, 246);
     border-radius : 20px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(9, 78, 190); /* Thumb color on hover */
 }
